--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -85,6 +85,30 @@
     font-weight: 700;
   }
 
+  h1 {
+    @apply text-3xl;
+  }
+
+  h2 {
+    @apply text-2xl;
+  }
+
+  h3 {
+    @apply text-xl;
+  }
+
+  h4 {
+    @apply text-lg;
+  }
+
+  h5 {
+    @apply text-base font-bold;
+  }
+
+  h6 {
+    @apply text-sm font-bold uppercase;
+  }
+
   button,
   [role="button"],
   .button-font,
